Knowrob/indigo/indigo-knowrob-dev/catkin_ws/logs/knowrob_knowledge_base/build.make.096.log
[35m[1mScanning dependencies of target knowrob_knowledge_base_listener
[0m[100%] [32mBuilding CXX object CMakeFiles/knowrob_knowledge_base_listener.dir/src/listener.cpp.o
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp: In function 'void perceptCallback(knowrob_semantic_map_msgs::SemMapObject)':
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:24:21: error: 'class json_prolog::PrologQueryProxy' has no member named 'isFinished'
   std::cout << bdgs.isFinished() << std::endl;
                     ^
make[2]: *** [CMakeFiles/knowrob_knowledge_base_listener.dir/src/listener.cpp.o] Error 1
make[1]: *** [CMakeFiles/knowrob_knowledge_base_listener.dir/all] Error 2
make: *** [all] Error 2
